<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jury</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="type">Type / Typ / Type</string>
    <string name="head">Head / Kopf / Tête</string>
    <string name="eyes">Eyes / Augen / Yeux</string>
    <string name="ears">Ears / Ohren / Oreilles</string>
    <string name="coat">Coat / Fell / Fourrure</string>
    <string name="tail">Tail / Schwanz / Queue</string>
    <string name="condition">Condition / Kondition / Condition</string>
    <string name="impress">Impress / Gesamteindruck / Impression</string>
    <string name="comment">Comment / Kommentar / Annotation</string>
    <string name="bodyPoints">%1$s</string>
    <string name="headPoints">%1$s</string>
    <string name="eyesPoints">%1$s</string>
    <string name="earsPoints">%1$s</string>
    <string name="coatPoints">%1$s</string>
    <string name="tailPoints">%1$s</string>
    <string name="conditionPoints">%1$s</string>
    <string name="backButton">Back</string>
    <string name="rank">Rank / Rang / Rang</string>
    <string name="nomination"> Nomination</string>
    <string name="biv"> BIV</string>
    <string name="nr">No. %1$s</string>
    <string name="br">Breed: %1$s</string>
    <string name="co">%1$s</string>
    <string name="cl">Class: %1$s</string>
    <string name="se">Sex: %1$s</string>
    <string name="bo">Born: %1$s</string>
    <string name="jury_name">%1$s</string>
    <string name="backToast">Back!</string>
    <string name="sendToast">Success!</string>
    <string name="mark_prompt">Choose a mark</string>
    <string name="rank_prompt">Choose rank</string>
    <string name="insert_ip">Server IP address</string>
    <string name="insert_name">Jury name</string>
    <string name="buttonConnect">Connect</string>
    <string name="buttonStart">Start</string>
    <string name="titleComment">Write reason if no title</string>
	<string name="note">Note</string>
    
    <string-array name="mark_arrays">
        <item>EX</item>
        <item>VG</item>
        <item>G</item>
        <item>HP</item>
        <item>Disqualified</item>
    </string-array>
    
    <string-array name="rank_arrays">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="title_prompt">Choose a title</string>

    <string-array name="title_arrays_classNo">
        <item></item>
    </string-array>
    <string-array name="title_arrays_class3">
        <item></item>
        <item>CACS</item>
    </string-array>
    <string-array name="title_arrays_class4">
        <item></item>
        <item>CAPS</item>
    </string-array>
    <string-array name="title_arrays_class5">
        <item></item>
        <item>CAGCIB</item>
    </string-array>
    <string-array name="title_arrays_class6">
        <item></item>
        <item>CAGPIB</item>
    </string-array>
    <string-array name="title_arrays_class7">
        <item></item>
        <item>CACIB</item>
    </string-array>
    <string-array name="title_arrays_class8">
        <item></item>
        <item>CAPIB</item>
    </string-array>
    <string-array name="title_arrays_class9">
        <item></item>
        <item>CAC</item>
    </string-array>
    <string-array name="title_arrays_class10">
        <item></item>
        <item>CAP</item>
    </string-array>

</resources>