<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConnectorActivity" >

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextIP"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:ems="10"
        android:hint="@string/insert_name"
        android:singleLine="true"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editTextIP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextName"
        android:layout_alignParentTop="true"
        android:layout_marginTop="87dp"
        android:ems="10"
        android:hint="@string/insert_ip"
        android:singleLine="true"
        android:textSize="30sp" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:text="@string/buttonConnect" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sendButton"
        android:layout_alignRight="@+id/sendButton"
        android:layout_below="@+id/sendButton"
        android:onClick="startJuryClicked"
        android:layout_marginTop="39dp"
        android:text="@string/buttonStart" />

</RelativeLayout>